# dotfiles

./: .bash_logout  .bash_profile  .bash_shortcuts  .bashrc  .profile  .tmux.conf  .vimrc  .xinitrc  .xprofile  Makefile  README.md  TODO  a  b  compton.conf  dockerfile  install.sh  repos  usage.mkfl
.cabal/: config
.config/: .aliasrc  .cleanrc  .dockerrc  .fzfrc  mimeapps.list  user-dirs.dirs
.config/bluetuith/: bluetuith.conf
.config/btop/: btop.conf
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/ghostty/: config
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/lf/: lfrc
.config/newsboat/: config
.config/nvim/: config.vim  init.lua  init.vim  keys.vim  lazy-lock.json  plug.vim  plug_config.vim
.config/rofi/: config.rasi  (+1 more)
.scripts/: available  ethernet  killallssh  lockHelper.sh  screen  screenI  sound  space_indent  toMP4
bash/: .aliasrc  .bash_history  .bash_profile  .bashrc  .bashrc.save  .profile  .vimrc  BINDINGS.md  Makefile  README.md  SHELL_NOTES.md  WIP_install.sh  install.sh  tmux.conf
i3/: config
mac/: brew.pkg  install.sh  update.sh
misc/: .emoji
pdf/: Makefile  md.md  note
polybar/: config  launch.old  launch.sh  pulseaudio-simple.sh  temperature.sh  updates-arch-combined.sh
scripts/: dotupdater  gpa  pdf2jpg
shell/: .bash_profile  .bashrc  .vimrc
temp/: init.vim
templates/cpp/: .gitignore  CMakeLists.txt  README.md
templates/cpp/include/: Machine.h
templates/cpp/src/: Machine.cpp  main.cpp
vim/: config.vim  init.vim  keys.vim  plug.vim  plug_config.vim
windows/: WSL_NOTES
(+99 files in other folders)
